fix(components/profile-card) - include java, truncate blob link

--- a/app/styles/profile-card.scss
+++ b/app/styles/profile-card.scss
@@ -4,3 +4,6 @@
 .mdi-action-book {
   margin-left: -20px;
 }
+.profile-content {
+  min-height: 170px;
+}
